--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.8.3",
     "react-responsive-carousel": "^3.1.47",
     "react-scripts": "2.1.5",
+    "react_google_calendar": "^2.2.3",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
@@ -25,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "superagent": "^4.1.0"
+  }
 }
